--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+guayadeque (0.7.2) stable; urgency=low
+
+  * Initial release
+
+ -- Norbert X <nrbrtx@gmail.com>  Sun, 08 Jun 2025 13:33:37 +0000
+
 guayadeque (0.7.1) stable; urgency=low
 
   * Initial release
